--- a/Sudoku Solver Form/Sudoku Solver Form.csproj
+++ b/Sudoku Solver Form/Sudoku Solver Form.csproj
@@ -84,5 +84,8 @@
   <ItemGroup>
     <None Include="Resources\Science-and-Engineering-Challenge-Background.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Alecive-Flatwoken-Apps-Sudoku.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
